Fixes beta overlap on welcome screen

--- a/HCCGo/app/css/application.less
+++ b/HCCGo/app/css/application.less
@@ -91,9 +91,9 @@ body {
       .element-subtitle{
         z-index:1;
         font-size:medium;
-        margin:-20px 0 0 100px;
+        margin:-20px 0 0 160px;
         position:relative;
-        color:black;
+        color:white;
       }
     }
   }
